JavaGrammar.output
Terminals unused in grammar

   TOK_BOOLVAL
   TOK_CHARVAL
   TOK_DOUBLEVAL
   TOK_LONGVAL
   TOK_SHORTVAL
   TOK_NULLVAL
   TOK_ASSERT
   TOK_GOTO
   TOK_THIS
   TOK_THROW
   TOK_BYTE
   TOK_THROWS
   TOK_ENUM
   TOK_INSTANCEOF
   TOK_SHORT
   TOK_CHAR
   TOK_LONG
   TOK_CONST
   TOK_SUPER
   TOK_QUESTION
   TOK_BITOR
   TOK_BITAND
   TOK_BITXOR
   TOK_LSHIFT
   TOK_RSHIFT
   TOK_RSHIFTZ
   TOK_BITNEG
   TOK_NEG


Rules useless in parser due to conflicts

   18 extendsorimplements: %empty


State 51 conflicts: 1 shift/reduce
State 272 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: packagedec importstatements typedec

    2 packagedec: %empty
    3           | TOK_PACKAGE packagename TOK_SEMI

    4 importstatements: %empty
    5                 | importstatement importstatements

    6 importstatement: TOK_IMPORT packagename TOK_SEMI
    7                | TOK_IMPORT packagename TOK_DOT TOK_MUL TOK_SEMI

    8 packagename: TOK_IDENTIFIER
    9            | packagename TOK_DOT TOK_IDENTIFIER

   10 typedec: interfacedec
   11        | classdec
   12        | classdec typedec
   13        | interfacedec typedec

   14 interfacedec: mod TOK_INTERFACE TOK_IDENTIFIER TOK_LBRACE interfacebody TOK_RBRACE
   15             | mod TOK_INTERFACE TOK_IDENTIFIER TOK_EXTENDS TOK_IDENTIFIER TOK_LBRACE interfacebody TOK_RBRACE

   16 classdec: mod TOK_CLASS TOK_IDENTIFIER TOK_LBRACE classbody TOK_RBRACE
   17         | mod TOK_CLASS TOK_IDENTIFIER extendsorimplements TOK_LBRACE classbody TOK_RBRACE

   18 extendsorimplements: %empty
   19                    | TOK_EXTENDS TOK_IDENTIFIER
   20                    | TOK_IMPLEMENTS implements
   21                    | TOK_EXTENDS TOK_IDENTIFIER TOK_IMPLEMENTS implements

   22 implements: TOK_IDENTIFIER
   23           | TOK_IDENTIFIER TOK_COMMA implements

   24 mod: %empty
   25    | TOK_FINAL mod
   26    | TOK_ABSTRACT mod
   27    | TOK_STRICTFP mod
   28    | TOK_STATIC mod
   29    | TOK_NATIVE mod
   30    | TOK_SYNCHRONIZED mod
   31    | TOK_TRANSIENT mod
   32    | TOK_VOLATILE mod
   33    | TOK_PUBLIC mod
   34    | TOK_PRIVATE mod
   35    | TOK_PROTECTED mod
   36    | TOK_DEFAULT mod

   37 interfacemod: %empty
   38             | TOK_PRIVATE interfacemod
   39             | TOK_PUBLIC interfacemod
   40             | TOK_DEFAULT interfacemod
   41             | TOK_STATIC interfacemod
   42             | TOK_STRICTFP interfacemod
   43             | TOK_FINAL interfacemod
   44             | TOK_ABSTRACT interfacemod

   45 classbody: %empty
   46          | mod declarationstatement TOK_SEMI classbody
   47          | mod initializationstatement TOK_SEMI classbody
   48          | classmethod classbody
   49          | classdec classbody
   50          | interfacedec classbody

   51 interfacebody: %empty
   52              | interfacemod initializationstatement TOK_SEMI interfacebody
   53              | interfacemethod interfacebody
   54              | classdec interfacebody
   55              | interfacedec interfacebody

   56 interfacemethod: interfacemod abstractmethod
   57                | interfacemod datatype TOK_IDENTIFIER TOK_LPAREN formalparameters TOK_RPAREN TOK_LBRACE block TOK_RBRACE
   58                | interfacemod TOK_VOID TOK_IDENTIFIER TOK_LPAREN formalparameters TOK_RPAREN TOK_LBRACE block TOK_RBRACE

   59 abstractmethod: datatype TOK_IDENTIFIER TOK_LPAREN formalparameters TOK_RPAREN TOK_SEMI
   60               | TOK_VOID TOK_IDENTIFIER TOK_LPAREN formalparameters TOK_RPAREN TOK_SEMI

   61 classmethod: mod datatype TOK_IDENTIFIER TOK_LPAREN formalparameters TOK_RPAREN TOK_LBRACE block TOK_RBRACE
   62            | mod TOK_VOID TOK_IDENTIFIER TOK_LPAREN formalparameters TOK_RPAREN TOK_LBRACE block TOK_RBRACE
   63            | mod TOK_IDENTIFIER TOK_LPAREN formalparameters TOK_RPAREN TOK_LBRACE block TOK_RBRACE
   64            | mod abstractmethod

   65 formalparameters: %empty
   66                 | declarationstatement
   67                 | declarationstatement TOK_COMMA formalparameters

   68 argument: %empty
   69         | expression
   70         | expressionstatement
   71         | expression TOK_COMMA argument
   72         | expressionstatement TOK_COMMA argument

   73 datatype: TOK_INT
   74         | TOK_BOOLEAN
   75         | TOK_FLOAT
   76         | TOK_IDENTIFIER
   77         | TOK_DOUBLE

   78 block: %empty
   79      | statement block

   80 statement: expressionstatement TOK_SEMI
   81          | controlflowstatement
   82          | declarationstatement TOK_SEMI
   83          | initializationstatement TOK_SEMI
   84          | trycatchblock

   85 expressionstatement: instancemethodcall
   86                    | methodcall
   87                    | postdecrement
   88                    | predecrement
   89                    | assignmentstatement

   90 expression: TOK_INTVAL
   91           | TOK_FLOATVAL
   92           | TOK_STRINGVAL
   93           | TOK_IDENTIFIER
   94           | TOK_IDENTIFIER TOK_LBRACKET TOK_INTVAL TOK_RBRACKET
   95           | expression TOK_ADD expression
   96           | expression TOK_SUB expression
   97           | expression TOK_MOD expression
   98           | expression TOK_DIV expression
   99           | expression TOK_MUL expression
  100           | expression TOK_EQUAL expression
  101           | expression TOK_NEQUAL expression
  102           | expression TOK_GREATER expression
  103           | expression TOK_LESS expression
  104           | expression TOK_GEQUAL expression
  105           | expression TOK_LEQUAL expression
  106           | expression TOK_AND expression
  107           | expression TOK_OR expression

  108 assignmentstatement: TOK_IDENTIFIER TOK_ASSIGN expression
  109                    | TOK_IDENTIFIER TOK_MODASSIGN expression
  110                    | TOK_IDENTIFIER TOK_DIVASSIGN expression
  111                    | TOK_IDENTIFIER TOK_MULASSIGN expression
  112                    | TOK_IDENTIFIER TOK_ADDASSIGN expression
  113                    | TOK_IDENTIFIER TOK_SUBASSIGN expression
  114                    | TOK_IDENTIFIER TOK_ASSIGN TOK_NEW datastructure TOK_LPAREN TOK_RPAREN
  115                    | TOK_IDENTIFIER TOK_ASSIGN TOK_NEW TOK_IDENTIFIER TOK_LPAREN argument TOK_RPAREN
  116                    | TOK_IDENTIFIER TOK_ASSIGN TOK_NEW datatype TOK_LBRACKET TOK_RBRACKET TOK_LBRACE argument TOK_RBRACE
  117                    | TOK_IDENTIFIER TOK_ASSIGN TOK_NEW datatype TOK_LBRACKET TOK_INTVAL TOK_RBRACKET
  118                    | TOK_IDENTIFIER TOK_ASSIGN methodcall
  119                    | TOK_IDENTIFIER TOK_ASSIGN instancemethodcall

  120 controlflowstatement: whileloop
  121                     | dowhileloop
  122                     | forloop
  123                     | ifstatement
  124                     | ifelsestatement
  125                     | switchstatement
  126                     | TOK_BREAK TOK_SEMI
  127                     | TOK_CONTINUE TOK_SEMI
  128                     | TOK_RETURN TOK_IDENTIFIER TOK_SEMI

  129 declarationstatement: datatype TOK_IDENTIFIER
  130                     | TOK_IDENTIFIER TOK_LESS datatype TOK_GREATER TOK_IDENTIFIER
  131                     | datatype TOK_LBRACKET TOK_RBRACKET TOK_IDENTIFIER
  132                     | datatype TOK_IDENTIFIER TOK_LBRACKET TOK_RBRACKET

  133 initializationstatement: datatype TOK_IDENTIFIER TOK_ASSIGN expression
  134                        | datatype TOK_LBRACKET TOK_RBRACKET TOK_IDENTIFIER TOK_ASSIGN TOK_NEW datatype TOK_LBRACKET TOK_INTVAL TOK_RBRACKET
  135                        | datatype TOK_IDENTIFIER TOK_LBRACKET TOK_RBRACKET TOK_ASSIGN TOK_NEW datatype TOK_LBRACKET TOK_INTVAL TOK_RBRACKET
  136                        | datatype TOK_LBRACKET TOK_RBRACKET TOK_IDENTIFIER TOK_ASSIGN TOK_LBRACE argument TOK_RBRACE
  137                        | datatype TOK_IDENTIFIER TOK_LBRACKET TOK_RBRACKET TOK_ASSIGN TOK_LBRACE argument TOK_RBRACE
  138                        | datatype TOK_LBRACKET TOK_RBRACKET TOK_IDENTIFIER TOK_ASSIGN TOK_NEW datatype TOK_LBRACKET TOK_RBRACKET TOK_LBRACE argument TOK_RBRACE
  139                        | datatype TOK_IDENTIFIER TOK_LBRACKET TOK_RBRACKET TOK_ASSIGN TOK_NEW datatype TOK_LBRACKET TOK_RBRACKET TOK_LBRACE argument TOK_RBRACE
  140                        | datatype TOK_IDENTIFIER TOK_ASSIGN TOK_NEW TOK_IDENTIFIER TOK_LPAREN argument TOK_RPAREN
  141                        | datatype TOK_IDENTIFIER TOK_ASSIGN TOK_NEW datastructure TOK_LPAREN TOK_RPAREN
  142                        | datatype TOK_IDENTIFIER TOK_ASSIGN methodcall
  143                        | datatype TOK_IDENTIFIER TOK_ASSIGN instancemethodcall
  144                        | TOK_IDENTIFIER TOK_LESS datatype TOK_GREATER TOK_IDENTIFIER TOK_ASSIGN TOK_NEW datastructure TOK_LPAREN argument TOK_RPAREN

  145 datastructure: TOK_IDENTIFIER TOK_LESS datatype TOK_GREATER
  146              | TOK_IDENTIFIER TOK_LESS TOK_GREATER

  147 whileloop: TOK_WHILE TOK_LPAREN expression TOK_RPAREN TOK_LBRACE block TOK_RBRACE

  148 dowhileloop: TOK_DO TOK_LBRACE block TOK_RBRACE TOK_WHILE TOK_LPAREN expression TOK_RPAREN TOK_SEMI

  149 forloop: TOK_FOR TOK_LPAREN initializationstatement TOK_SEMI expression TOK_SEMI postdecrement TOK_RPAREN TOK_LBRACE block TOK_RBRACE

  150 ifstatement: TOK_IF TOK_LPAREN expression TOK_RPAREN TOK_LBRACE block TOK_RBRACE
  151            | TOK_IF TOK_LPAREN expression TOK_RPAREN statement

  152 ifelsestatement: ifstatement TOK_ELSE TOK_LBRACE block TOK_RBRACE
  153                | ifstatement TOK_ELSE statement

  154 switchstatement: TOK_SWITCH TOK_LPAREN expression TOK_RPAREN TOK_LBRACE switchbody TOK_RBRACE
  155                | TOK_SWITCH TOK_LPAREN expression TOK_RPAREN TOK_LBRACE switchbody TOK_DEFAULT TOK_COLON block TOK_RBRACE

  156 switchbody: TOK_CASE expression TOK_COLON block
  157           | TOK_CASE expression TOK_COLON block switchbody

  158 trycatchblock: TOK_TRY TOK_LBRACE block TOK_RBRACE TOK_CATCH TOK_LPAREN declarationstatement TOK_RPAREN TOK_LBRACE block TOK_RBRACE
  159              | TOK_TRY TOK_LBRACE block TOK_RBRACE TOK_CATCH TOK_LPAREN declarationstatement TOK_RPAREN TOK_LBRACE block TOK_RBRACE TOK_FINALLY TOK_LBRACE block TOK_RBRACE

  160 postdecrement: TOK_IDENTIFIER TOK_ADDADD
  161              | TOK_IDENTIFIER TOK_SUBSUB

  162 predecrement: TOK_ADDADD TOK_IDENTIFIER
  163             | TOK_SUBSUB TOK_IDENTIFIER

  164 instancemethodcall: fieldreference TOK_DOT methodcall
  165                   | TOK_IDENTIFIER TOK_DOT methodcall

  166 methodcall: TOK_IDENTIFIER TOK_LPAREN argument TOK_RPAREN
  167           | methodcall TOK_DOT TOK_IDENTIFIER TOK_LPAREN argument TOK_RPAREN

  168 fieldreference: TOK_IDENTIFIER TOK_DOT TOK_IDENTIFIER
  169               | fieldreference TOK_DOT TOK_IDENTIFIER


Terminals, with rules where they appear

$end (0) 0
TOK_IDENTIFIER (100) 8 9 14 15 16 17 19 21 22 23 57 58 59 60 61 62
    63 76 93 94 108 109 110 111 112 113 114 115 116 117 118 119 128
    129 130 131 132 133 134 135 136 137 138 139 140 141 142 143 144
    145 146 160 161 162 163 165 166 167 168 169
TOK_INTVAL (101) 90 94 117 134 135
TOK_FLOATVAL (102) 91
TOK_STRINGVAL (103) 92
TOK_BOOLVAL (104)
TOK_CHARVAL (105)
TOK_DOUBLEVAL (106)
TOK_LONGVAL (107)
TOK_SHORTVAL (108)
TOK_NULLVAL (109)
TOK_ABSTRACT (200) 26 44
TOK_CONTINUE (201) 127
TOK_FOR (202) 149
TOK_NEW (203) 114 115 116 117 134 135 138 139 140 141 144
TOK_SWITCH (204) 154 155
TOK_ASSERT (205)
TOK_DEFAULT (206) 36 40 155
TOK_GOTO (207)
TOK_PACKAGE (208) 3
TOK_SYNCHRONIZED (209) 30
TOK_BOOLEAN (210) 74
TOK_DO (211) 148
TOK_IF (212) 150 151
TOK_PRIVATE (213) 34 38
TOK_THIS (214)
TOK_BREAK (215) 126
TOK_DOUBLE (216) 77
TOK_IMPLEMENTS (217) 20 21
TOK_PROTECTED (218) 35
TOK_THROW (219)
TOK_BYTE (220)
TOK_ELSE (221) 152 153
TOK_IMPORT (222) 6 7
TOK_PUBLIC (223) 33 39
TOK_THROWS (224)
TOK_CASE (225) 156 157
TOK_ENUM (226)
TOK_INSTANCEOF (227)
TOK_RETURN (228) 128
TOK_TRANSIENT (229) 31
TOK_CATCH (230) 158 159
TOK_EXTENDS (231) 15 19 21
TOK_INT (232) 73
TOK_SHORT (233)
TOK_TRY (234) 158 159
TOK_CHAR (235)
TOK_FINAL (236) 25 43
TOK_INTERFACE (237) 14 15
TOK_STATIC (238) 28 41
TOK_VOID (239) 58 60 62
TOK_CLASS (240) 16 17
TOK_FINALLY (241) 159
TOK_LONG (242)
TOK_STRICTFP (243) 27 42
TOK_VOLATILE (244) 32
TOK_CONST (245)
TOK_FLOAT (246) 75
TOK_NATIVE (247) 29
TOK_SUPER (248)
TOK_WHILE (249) 147 148
error (256)
TOK_LBRACKET (300) 94 116 117 131 132 134 135 136 137 138 139
TOK_RBRACKET (301) 94 116 117 131 132 134 135 136 137 138 139
TOK_LPAREN (302) 57 58 59 60 61 62 63 114 115 140 141 144 147 148 149
    150 151 154 155 158 159 166 167
TOK_RPAREN (303) 57 58 59 60 61 62 63 114 115 140 141 144 147 148 149
    150 151 154 155 158 159 166 167
TOK_LBRACE (304) 14 15 16 17 57 58 61 62 63 116 136 137 138 139 147
    148 149 150 152 154 155 158 159
TOK_RBRACE (305) 14 15 16 17 57 58 61 62 63 116 136 137 138 139 147
    148 149 150 152 154 155 158 159
TOK_COMMA (306) 23 67 71 72
TOK_SEMI (307) 3 6 7 46 47 52 59 60 80 82 83 126 127 128 148 149
TOK_DOT (308) 7 9 164 165 167 168 169
TOK_ASSIGN (309) 108 114 115 116 117 118 119 133 134 135 136 137 138
    139 140 141 142 143 144
TOK_MODASSIGN (310) 109
TOK_DIVASSIGN (311) 110
TOK_MULASSIGN (312) 111
TOK_ADDASSIGN (313) 112
TOK_SUBASSIGN (314) 113
TOK_COLON (315) 155 156 157
TOK_QUESTION (316)
TOK_OR (317) 107
TOK_AND (318) 106
TOK_BITOR (319)
TOK_BITAND (320)
TOK_BITXOR (321)
TOK_EQUAL (322) 100
TOK_NEQUAL (323) 101
TOK_LESS (324) 103 130 144 145 146
TOK_LEQUAL (325) 105
TOK_GREATER (326) 102 130 144 145 146
TOK_GEQUAL (327) 104
TOK_LSHIFT (328)
TOK_RSHIFT (329)
TOK_RSHIFTZ (330)
TOK_ADD (331) 95
TOK_SUB (332) 96
TOK_MOD (333) 97
TOK_DIV (334) 98
TOK_MUL (335) 7 99
TOK_BITNEG (336)
TOK_NEG (337)
TOK_SUBSUB (338) 161 163
TOK_ADDADD (339) 160 162


Nonterminals, with rules where they appear

$accept (103)
    on left: 0
program (104)
    on left: 1, on right: 0
packagedec (105)
    on left: 2 3, on right: 1
importstatements (106)
    on left: 4 5, on right: 1 5
importstatement (107)
    on left: 6 7, on right: 5
packagename (108)
    on left: 8 9, on right: 3 6 7 9
typedec (109)
    on left: 10 11 12 13, on right: 1 12 13
interfacedec (110)
    on left: 14 15, on right: 10 13 50 55
classdec (111)
    on left: 16 17, on right: 11 12 49 54
extendsorimplements (112)
    on left: 18 19 20 21, on right: 17
implements (113)
    on left: 22 23, on right: 20 21 23
mod (114)
    on left: 24 25 26 27 28 29 30 31 32 33 34 35 36, on right: 14 15
    16 17 25 26 27 28 29 30 31 32 33 34 35 36 46 47 61 62 63 64
interfacemod (115)
    on left: 37 38 39 40 41 42 43 44, on right: 38 39 40 41 42 43 44
    52 56 57 58
classbody (116)
    on left: 45 46 47 48 49 50, on right: 16 17 46 47 48 49 50
interfacebody (117)
    on left: 51 52 53 54 55, on right: 14 15 52 53 54 55
interfacemethod (118)
    on left: 56 57 58, on right: 53
abstractmethod (119)
    on left: 59 60, on right: 56 64
classmethod (120)
    on left: 61 62 63 64, on right: 48
formalparameters (121)
    on left: 65 66 67, on right: 57 58 59 60 61 62 63 67
argument (122)
    on left: 68 69 70 71 72, on right: 71 72 115 116 136 137 138 139
    140 144 166 167
datatype (123)
    on left: 73 74 75 76 77, on right: 57 59 61 116 117 129 130 131
    132 133 134 135 136 137 138 139 140 141 142 143 144 145
block (124)
    on left: 78 79, on right: 57 58 61 62 63 79 147 148 149 150 152
    155 156 157 158 159
statement (125)
    on left: 80 81 82 83 84, on right: 79 151 153
expressionstatement (126)
    on left: 85 86 87 88 89, on right: 70 72 80
expression (127)
    on left: 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105
    106 107, on right: 69 71 95 96 97 98 99 100 101 102 103 104 105
    106 107 108 109 110 111 112 113 133 147 148 149 150 151 154 155
    156 157
assignmentstatement (128)
    on left: 108 109 110 111 112 113 114 115 116 117 118 119, on right:
    89
controlflowstatement (129)
    on left: 120 121 122 123 124 125 126 127 128, on right: 81
declarationstatement (130)
    on left: 129 130 131 132, on right: 46 66 67 82 158 159
initializationstatement (131)
    on left: 133 134 135 136 137 138 139 140 141 142 143 144, on right:
    47 52 83 149
datastructure (132)
    on left: 145 146, on right: 114 141 144
whileloop (133)
    on left: 147, on right: 120
dowhileloop (134)
    on left: 148, on right: 121
forloop (135)
    on left: 149, on right: 122
ifstatement (136)
    on left: 150 151, on right: 123 152 153
ifelsestatement (137)
    on left: 152 153, on right: 124
switchstatement (138)
    on left: 154 155, on right: 125
switchbody (139)
    on left: 156 157, on right: 154 155 157
trycatchblock (140)
    on left: 158 159, on right: 84
postdecrement (141)
    on left: 160 161, on right: 87 149
predecrement (142)
    on left: 162 163, on right: 88
instancemethodcall (143)
    on left: 164 165, on right: 85 119 143
methodcall (144)
    on left: 166 167, on right: 86 118 142 164 165 167
fieldreference (145)
    on left: 168 169, on right: 164 169


State 0

    0 $accept: . program $end

    TOK_PACKAGE  shift, and go to state 1

    $default  reduce using rule 2 (packagedec)

    program     go to state 2
    packagedec  go to state 3


State 1

    3 packagedec: TOK_PACKAGE . packagename TOK_SEMI

    TOK_IDENTIFIER  shift, and go to state 4

    packagename  go to state 5


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

    1 program: packagedec . importstatements typedec

    TOK_IMPORT  shift, and go to state 7

    $default  reduce using rule 4 (importstatements)

    importstatements  go to state 8
    importstatement   go to state 9


State 4

    8 packagename: TOK_IDENTIFIER .

    $default  reduce using rule 8 (packagename)


State 5

    3 packagedec: TOK_PACKAGE packagename . TOK_SEMI
    9 packagename: packagename . TOK_DOT TOK_IDENTIFIER

    TOK_SEMI  shift, and go to state 10
    TOK_DOT   shift, and go to state 11


State 6

    0 $accept: program $end .

    $default  accept


State 7

    6 importstatement: TOK_IMPORT . packagename TOK_SEMI
    7                | TOK_IMPORT . packagename TOK_DOT TOK_MUL TOK_SEMI

    TOK_IDENTIFIER  shift, and go to state 4

    packagename  go to state 12


State 8

    1 program: packagedec importstatements . typedec

    TOK_ABSTRACT      shift, and go to state 13
    TOK_DEFAULT       shift, and go to state 14
    TOK_SYNCHRONIZED  shift, and go to state 15
    TOK_PRIVATE       shift, and go to state 16
    TOK_PROTECTED     shift, and go to state 17
    TOK_PUBLIC        shift, and go to state 18
    TOK_TRANSIENT     shift, and go to state 19
    TOK_FINAL         shift, and go to state 20
    TOK_STATIC        shift, and go to state 21
    TOK_STRICTFP      shift, and go to state 22
    TOK_VOLATILE      shift, and go to state 23
    TOK_NATIVE        shift, and go to state 24

    $default  reduce using rule 24 (mod)

    typedec       go to state 25
    interfacedec  go to state 26
    classdec      go to state 27
    mod           go to state 28


State 9

    5 importstatements: importstatement . importstatements

    TOK_IMPORT  shift, and go to state 7

    $default  reduce using rule 4 (importstatements)

    importstatements  go to state 29
    importstatement   go to state 9


State 10

    3 packagedec: TOK_PACKAGE packagename TOK_SEMI .

    $default  reduce using rule 3 (packagedec)


State 11

    9 packagename: packagename TOK_DOT . TOK_IDENTIFIER

    TOK_IDENTIFIER  shift, and go to state 30


State 12

    6 importstatement: TOK_IMPORT packagename . TOK_SEMI
    7                | TOK_IMPORT packagename . TOK_DOT TOK_MUL TOK_SEMI
    9 packagename: packagename . TOK_DOT TOK_IDENTIFIER

    TOK_SEMI  shift, and go to state 31
    TOK_DOT   shift, and go to state 32


State 13

   26 mod: TOK_ABSTRACT . mod

    TOK_ABSTRACT      shift, and go to state 13
    TOK_DEFAULT       shift, and go to state 14
    TOK_SYNCHRONIZED  shift, and go to state 15
    TOK_PRIVATE       shift, and go to state 16
    TOK_PROTECTED     shift, and go to state 17
    TOK_PUBLIC        shift, and go to state 18
    TOK_TRANSIENT     shift, and go to state 19
    TOK_FINAL         shift, and go to state 20
    TOK_STATIC        shift, and go to state 21
    TOK_STRICTFP      shift, and go to state 22
    TOK_VOLATILE      shift, and go to state 23
    TOK_NATIVE        shift, and go to state 24

    $default  reduce using rule 24 (mod)

    mod  go to state 33


State 14

   36 mod: TOK_DEFAULT . mod

    TOK_ABSTRACT      shift, and go to state 13
    TOK_DEFAULT       shift, and go to state 14
    TOK_SYNCHRONIZED  shift, and go to state 15
    TOK_PRIVATE       shift, and go to state 16
    TOK_PROTECTED     shift, and go to state 17
    TOK_PUBLIC        shift, and go to state 18
    TOK_TRANSIENT     shift, and go to state 19
    TOK_FINAL         shift, and go to state 20
    TOK_STATIC        shift, and go to state 21
    TOK_STRICTFP      shift, and go to state 22
    TOK_VOLATILE      shift, and go to state 23
    TOK_NATIVE        shift, and go to state 24

    $default  reduce using rule 24 (mod)

    mod  go to state 34


State 15

   30 mod: TOK_SYNCHRONIZED . mod

    TOK_ABSTRACT      shift, and go to state 13
    TOK_DEFAULT       shift, and go to state 14
    TOK_SYNCHRONIZED  shift, and go to state 15
    TOK_PRIVATE       shift, and go to state 16
    TOK_PROTECTED     shift, and go to state 17
    TOK_PUBLIC        shift, and go to state 18
    TOK_TRANSIENT     shift, and go to state 19
    TOK_FINAL         shift, and go to state 20
    TOK_STATIC        shift, and go to state 21
    TOK_STRICTFP      shift, and go to state 22
    TOK_VOLATILE      shift, and go to state 23
    TOK_NATIVE        shift, and go to state 24

    $default  reduce using rule 24 (mod)

    mod  go to state 35


State 16

   34 mod: TOK_PRIVATE . mod

    TOK_ABSTRACT      shift, and go to state 13
    TOK_DEFAULT       shift, and go to state 14
    TOK_SYNCHRONIZED  shift, and go to state 15
    TOK_PRIVATE       shift, and go to state 16
    TOK_PROTECTED     shift, and go to state 17
    TOK_PUBLIC        shift, and go to state 18
    TOK_TRANSIENT     shift, and go to state 19
    TOK_FINAL         shift, and go to state 20
    TOK_STATIC        shift, and go to state 21
    TOK_STRICTFP      shift, and go to state 22
    TOK_VOLATILE      shift, and go to state 23
    TOK_NATIVE        shift, and go to state 24

    $default  reduce using rule 24 (mod)

    mod  go to state 36


State 17

   35 mod: TOK_PROTECTED . mod

    TOK_ABSTRACT      shift, and go to state 13
    TOK_DEFAULT       shift, and go to state 14
    TOK_SYNCHRONIZED  shift, and go to state 15
    TOK_PRIVATE       shift, and go to state 16
    TOK_PROTECTED     shift, and go to state 17
    TOK_PUBLIC        shift, and go to state 18
    TOK_TRANSIENT     shift, and go to state 19
    TOK_FINAL         shift, and go to state 20
    TOK_STATIC        shift, and go to state 21
    TOK_STRICTFP      shift, and go to state 22
    TOK_VOLATILE      shift, and go to state 23
    TOK_NATIVE        shift, and go to state 24

    $default  reduce using rule 24 (mod)

    mod  go to state 37


State 18

   33 mod: TOK_PUBLIC . mod

    TOK_ABSTRACT      shift, and go to state 13
    TOK_DEFAULT       shift, and go to state 14
    TOK_SYNCHRONIZED  shift, and go to state 15
    TOK_PRIVATE       shift, and go to state 16
    TOK_PROTECTED     shift, and go to state 17
    TOK_PUBLIC        shift, and go to state 18
    TOK_TRANSIENT     shift, and go to state 19
    TOK_FINAL         shift, and go to state 20
    TOK_STATIC        shift, and go to state 21
    TOK_STRICTFP      shift, and go to state 22
    TOK_VOLATILE      shift, and go to state 23
    TOK_NATIVE        shift, and go to state 24

    $default  reduce using rule 24 (mod)

    mod  go to state 38


State 19

   31 mod: TOK_TRANSIENT . mod

    TOK_ABSTRACT      shift, and go to state 13
    TOK_DEFAULT       shift, and go to state 14
    TOK_SYNCHRONIZED  shift, and go to state 15
    TOK_PRIVATE       shift, and go to state 16
    TOK_PROTECTED     shift, and go to state 17
    TOK_PUBLIC        shift, and go to state 18
    TOK_TRANSIENT     shift, and go to state 19
    TOK_FINAL         shift, and go to state 20
    TOK_STATIC        shift, and go to state 21
    TOK_STRICTFP      shift, and go to state 22
    TOK_VOLATILE      shift, and go to state 23
    TOK_NATIVE        shift, and go to state 24

    $default  reduce using rule 24 (mod)

    mod  go to state 39


State 20

   25 mod: TOK_FINAL . mod

    TOK_ABSTRACT      shift, and go to state 13
    TOK_DEFAULT       shift, and go to state 14
    TOK_SYNCHRONIZED  shift, and go to state 15
    TOK_PRIVATE       shift, and go to state 16
    TOK_PROTECTED     shift, and go to state 17
    TOK_PUBLIC        shift, and go to state 18
    TOK_TRANSIENT     shift, and go to state 19
    TOK_FINAL         shift, and go to state 20
    TOK_STATIC        shift, and go to state 21
    TOK_STRICTFP      shift, and go to state 22
    TOK_VOLATILE      shift, and go to state 23
    TOK_NATIVE        shift, and go to state 24

    $default  reduce using rule 24 (mod)

    mod  go to state 40


State 21

   28 mod: TOK_STATIC . mod

    TOK_ABSTRACT      shift, and go to state 13
    TOK_DEFAULT       shift, and go to state 14
    TOK_SYNCHRONIZED  shift, and go to state 15
    TOK_PRIVATE       shift, and go to state 16
    TOK_PROTECTED     shift, and go to state 17
    TOK_PUBLIC        shift, and go to state 18
    TOK_TRANSIENT     shift, and go to state 19
    TOK_FINAL         shift, and go to state 20
    TOK_STATIC        shift, and go to state 21
    TOK_STRICTFP      shift, and go to state 22
    TOK_VOLATILE      shift, and go to state 23
    TOK_NATIVE        shift, and go to state 24

    $default  reduce using rule 24 (mod)

    mod  go to state 41


State 22

   27 mod: TOK_STRICTFP . mod

    TOK_ABSTRACT      shift, and go to state 13
    TOK_DEFAULT       shift, and go to state 14
    TOK_SYNCHRONIZED  shift, and go to state 15
    TOK_PRIVATE       shift, and go to state 16
    TOK_PROTECTED     shift, and go to state 17
    TOK_PUBLIC        shift, and go to state 18
    TOK_TRANSIENT     shift, and go to state 19
    TOK_FINAL         shift, and go to state 20
    TOK_STATIC        shift, and go to state 21
    TOK_STRICTFP      shift, and go to state 22
    TOK_VOLATILE      shift, and go to state 23
    TOK_NATIVE        shift, and go to state 24

    $default  reduce using rule 24 (mod)

    mod  go to state 42


State 23

   32 mod: TOK_VOLATILE . mod

    TOK_ABSTRACT      shift, and go to state 13
    TOK_DEFAULT       shift, and go to state 14
    TOK_SYNCHRONIZED  shift, and go to state 15
    TOK_PRIVATE       shift, and go to state 16
    TOK_PROTECTED     shift, and go to state 17
    TOK_PUBLIC        shift, and go to state 18
    TOK_TRANSIENT     shift, and go to state 19
    TOK_FINAL         shift, and go to state 20
    TOK_STATIC        shift, and go to state 21
    TOK_STRICTFP      shift, and go to state 22
    TOK_VOLATILE      shift, and go to state 23
    TOK_NATIVE        shift, and go to state 24

    $default  reduce using rule 24 (mod)

    mod  go to state 43


State 24

   29 mod: TOK_NATIVE . mod

    TOK_ABSTRACT      shift, and go to state 13
    TOK_DEFAULT       shift, and go to state 14
    TOK_SYNCHRONIZED  shift, and go to state 15
    TOK_PRIVATE       shift, and go to state 16
    TOK_PROTECTED     shift, and go to state 17
    TOK_PUBLIC        shift, and go to state 18
    TOK_TRANSIENT     shift, and go to state 19
    TOK_FINAL         shift, and go to state 20
    TOK_STATIC        shift, and go to state 21
    TOK_STRICTFP      shift, and go to state 22
    TOK_VOLATILE      shift, and go to state 23
    TOK_NATIVE        shift, and go to state 24

    $default  reduce using rule 24 (mod)

    mod  go to state 44


State 25

    1 program: packagedec importstatements typedec .

    $default  reduce using rule 1 (program)


State 26

   10 typedec: interfacedec .
   13        | interfacedec . typedec

    TOK_ABSTRACT      shift, and go to state 13
    TOK_DEFAULT       shift, and go to state 14
    TOK_SYNCHRONIZED  shift, and go to state 15
    TOK_PRIVATE       shift, and go to state 16
    TOK_PROTECTED     shift, and go to state 17
    TOK_PUBLIC        shift, and go to state 18
    TOK_TRANSIENT     shift, and go to state 19
    TOK_FINAL         shift, and go to state 20
    TOK_STATIC        shift, and go to state 21
    TOK_STRICTFP      shift, and go to state 22
    TOK_VOLATILE      shift, and go to state 23
    TOK_NATIVE        shift, and go to state 24

    $end      reduce using rule 10 (typedec)
    $default  reduce using rule 24 (mod)

    typedec       go to state 45
    interfacedec  go to state 26
    classdec      go to state 27
    mod           go to state 28


State 27

   11 typedec: classdec .
   12        | classdec . typedec

    TOK_ABSTRACT      shift, and go to state 13
    TOK_DEFAULT       shift, and go to state 14
    TOK_SYNCHRONIZED  shift, and go to state 15
    TOK_PRIVATE       shift, and go to state 16
    TOK_PROTECTED     shift, and go to state 17
    TOK_PUBLIC        shift, and go to state 18
    TOK_TRANSIENT     shift, and go to state 19
    TOK_FINAL         shift, and go to state 20
    TOK_STATIC        shift, and go to state 21
    TOK_STRICTFP      shift, and go to state 22
    TOK_VOLATILE      shift, and go to state 23
    TOK_NATIVE        shift, and go to state 24

    $end      reduce using rule 11 (typedec)
    $default  reduce using rule 24 (mod)

    typedec       go to state 46
    interfacedec  go to state 26
    classdec      go to state 27
    mod           go to state 28

